--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,7 @@ thedaemon = "thedaemon.__main__:main"
 "Homepage" = "https://github.com/thegamecracks/daemon-example"
 "Issue Tracker" = "https://github.com/thegamecracks/daemon-example/issues"
 
+[tool.pyright]
+pythonPlatform = "All"
+
 [tool.setuptools_scm]
